<resources>
    <string name="app_name">android-firebase-intro</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="supertask">Supertask</string>
    <string name="input_email">Correo Electrónico</string>
    <string name="input_password">Contraseña</string>
    <string name="input_repeat_password">Repetir contraseña</string>
    <string name="forgot_password">¿has olvidado tu contraseña?</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="o">o</string>
    <string name="log_up">Registrarse</string>
    <string name="login_with_phone_btn">Entrar con el nº de teléfono</string>
    <string name="action_log_up">Regístrate</string>
    <string name="next">Continuar</string>
    <string name="name">Nombre</string>
    <string name="tasks">Tareas</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logout_description">Botón para cerrar sesión</string>
    <string name="my_tasks">Mis tareas</string>
    <string name="timer">Timer</string>
    <string name="add_task">Añadir una tarea nueva</string>
    <string name="new_task">Nueva tarea</string>
    <string name="select_category">Seleccionar categoría</string>
    <string name="create_task">Crear tarea</string>
    <string name="high">Alta</string>
    <string name="medium">Media</string>
    <string name="low">Baja</string>
    <string name="task_title">Titulo de la tarea</string>
    <string name="task_description">Descripción de la tarea</string>
</resources>