<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DA343C"
    android:orientation="vertical"
    tools:context=".views.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:padding="48dp"
        android:text="@string/supertask"
        android:textColor="@color/white"
        android:textSize="38sp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        android:padding="12dp"
        android:autofillHints=""
        android:background="@color/primaryRedLight"
        android:fontFamily="@font/inter_light"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        android:autofillHints=""
        android:background="@color/primaryRedLight"
        android:fontFamily="@font/inter_light"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/inter_light"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        android:padding="12dp"
        android:text="@string/log_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            app:dividerInsetEnd="12dp"
            app:dividerInsetStart="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/o" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            app:dividerInsetEnd="12dp"
            app:dividerInsetStart="12dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLoginHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        android:padding="12dp"
        android:text="@string/login_with_phone_btn" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_bold"
        android:paddingHorizontal="12dp"
        android:text="@string/log_up"
        android:textColor="@color/primary" />
</LinearLayout>