<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NewTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_new_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/home_topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/new_task" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_below="@id/app_bar_new_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        tools:context=".activities.NewTaskActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/task_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/task_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/categoryRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/txtAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_category"
                    android:inputType="none"
                    android:layout_marginRight="60dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnAddCategory"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:baselineAlignBottom="true"
                android:layout_alignTop="@id/txtInputLayout"
                android:layout_alignBottom="@id/txtInputLayout"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_add_24"
                android:gravity="center"
                />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/button1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="0"
                android:text="@string/low"
                android:backgroundTint="@color/primaryLight"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="1"
                android:text="@string/medium"
                android:backgroundTint="@color/primaryLight"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="2"
                android:text="@string/high"
                android:backgroundTint="@color/primaryLight"
                android:textColor="@color/white"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/btnAddTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_task"
            android:backgroundTint="@color/primaryRed"
            />
    </LinearLayout>
</RelativeLayout>