<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.RegisterFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_log_up_toolbar"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/action_log_up" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="12dp"
                android:autofillHints=""
                android:background="@color/primaryLight"
                android:fontFamily="@font/inter_light"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="12dp"
                android:autofillHints=""
                android:background="@color/primaryLight"
                android:fontFamily="@font/inter_light"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="12dp"
                android:autofillHints=""
                android:background="@color/primaryLight"
                android:fontFamily="@font/inter_light"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/input_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="12dp"
                android:autofillHints=""
                android:background="@color/primaryLight"
                android:fontFamily="@font/inter_light"
                android:hint="@string/input_repeat_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/inter_bold"
                android:paddingHorizontal="12dp"
                android:text="@string/next"
                android:textColor="@color/primary" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>